--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,104 +1,107 @@
 <!DOCTYPE html>
-<html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
-
-{{ partial "head.html" . }}
-
-
-<body>
-  <div class="main-container">
-
-    {{ partial "header.html" . }}
-    <div class="container">
-      {{ partial "breadcrumbs.html" . }}
-    </div>
-
-    <main role="main" id="conteudo" class="internal-page">
-      {{/* <header class="title-highlight">
-        <h1>Lala</h1>
-      </header> */}}
-
-      <section class="section">
-        <div class="container">
-          <div class="blog-wrap">
-            <div class="blog-content">
-              <div class=" rich-text">
-                <h2>{{ .Title }}</h2>
-
-                {{ if .Params.image }}
-
-                <img src="{{ .Params.image }}" alt="{{ .Title }}">
-
-                {{ end }}
-
-                {{ .Content }}
-
-              </div>
+<html
+  lang="{{ with .Site.Language.Params.locale }}
+    {{ . }}
+  {{ else }}
+    {{ .Site.LanguageCode }}
+  {{ end }}
+  "
+  class="{{ if .IsHome }}home-page{{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }}
+   {{ if eq (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js"
+>
+  {{ partial "head.html" . }}
 
 
-              {{ if .Params.authors }}
+  <body>
+    <div class="main-container">
+      {{ partial "header.html" . }}
+      <div class="container">
+        {{ partial "breadcrumbs.html" . }}
+      </div>
 
-              <div class="authors">
-                <div class="content smaller-width">
+      <main role="main" id="conteudo" class="internal-page">
+        {{/* <header class="title-highlight">
+          <h1>Lala</h1>
+          </header>
+        */}}
 
-                  {{ range .Params.authors }}
-                  {{ range where $.Site.Pages "Params.slug" .author }}
-                  <div class="authors__wrap">
-                    <div class="authors-image">
-                      <img src="{{ .Params.avatar }}" alt="{{ .Params.alt }}">
-                    </div>
-                    <div class="authors-about">
-                      <h2>{{ .Title }}</h2>
-                      {{ .Content }}
+
+        <section class="section">
+          <div class="container">
+            <div class="blog-wrap">
+              <div class="blog-content">
+                <div class=" rich-text">
+                  <h2>{{ .Title }}</h2>
+
+                  {{ if .Params.image }}
+
+                    <img src="{{ .Params.image }}" alt="{{ .Title }}" />
+                  {{ end }}
+
+                  {{ .Content }}
+
+                </div>
+
+                {{ if .Params.authors }}
+
+                  <div class="authors">
+                    <div class="content smaller-width">
+                      {{ range .Params.authors }}
+                        {{ range where $.Site.Pages "Params.slug" .author }}
+                          <div class="authors__wrap">
+                            <div class="authors-image">
+                              <img src="{{ .Params.avatar }}" alt="{{ .Params.alt }}" />
+                            </div>
+                            <div class="authors-about">
+                              <h2>{{ .Title }}</h2>
+                              {{ .Content }}
+                            </div>
+                          </div>
+                        {{ end }}
+                      {{ end }}
                     </div>
                   </div>
-                  {{ end }}
-                  {{ end }}
+                {{ end }}
+
+              </div>
+              <div class="sidebar">
+                <div>
+                  <h2>Pesquisar</h2>
+                  <input type="search" />
                 </div>
-              </div>
-              {{ end }}
-
-            </div>
-            <div class="sidebar">
-              <div>
-                <h2>Pesquisar</h2>
-                <input type="search">
-              </div>
-              <div>
-                <h2>Categorias</h2>
-
+                <div>
+                  <h2>Categorias</h2>
+                </div>
               </div>
             </div>
           </div>
+        </section>
 
-        </div>
-      </section>
+        {{ if .Params.relatedProjects }}
+          <aside>
+            <div class="container">
+              <h2 class="title">{{ i18n "seeAlso" | title }}</h2>
+              <ul class="posts">
+                {{ range .Params.relatedProjects }}
+                  {{ range where $.Site.Pages "Params.slug" .project }}
+                    <li class="post">
+                      <div class="post__content">
+                        <a href="../{{ .Params.slug }}">
+                          <h4>{{ if .Params.shortTitle }}{{ .Params.shortTitle }}{{ else }}{{ .Title }}{{ end }}</h4>
+                        </a>
+                        <a class="nav-link nav-link--plus--orange" href="../{{ .Params.slug }}">{{ i18n "Title" }}</a>
+                      </div>
+                    </li>
+                  {{ end }}
+                {{ end }}
+              </ul>
+            </div>
+          </aside>
+        {{ end }}
 
-      {{ if .Params.relatedProjects }}
-      <aside>
-        <div class="container">
-          <h2 class="title">{{ i18n "seeAlso" | title }}</h2>
-          <ul class="posts">
-            {{ range .Params.relatedProjects }}
-            {{ range where $.Site.Pages "Params.slug" .project }}
-            <li class="post">
-              <div class="post__content">
-                <a href="../{{ .Params.slug }}">
-                  <h4>{{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}</h4>
-                </a>
-                <a class="nav-link nav-link--plus--orange" href="../{{ .Params.slug }}">{{ i18n "Title" }}</a>
-              </div>
-            </li>
-            {{ end }}
-            {{ end }}
-          </ul>
-        </div>
-      </aside>
-      {{ end }}
+      </main>
+      {{ partial "footer.html" . }}
 
-    </main>
-    {{ partial "footer.html" . }}
-
-  </div>
-</body>
-
+    </div>
+  </body>
 </html>
