--- a/layouts/partials/global-citizen.html
+++ b/layouts/partials/global-citizen.html
@@ -1,34 +1,30 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 {{ with $data.globalCitizen }}
 
-<section class="image-with-text">
-  <div class="container">
-
-
-    <div class="two-columns align-items--center">
-      <div>
-        {{ if .content }}
-        <div class="rich-text">
-          {{ if .title }}
-          <h2>{{ .title }} </h2>
-          {{ end }}
-          <p>{{ .content | markdownify }}</p>
+  <section class="image-with-text">
+    <div class="container">
+      <div class="two-columns align-items--center reverse-content--odd">
+        <div class="section-image">
+          <img src="{{ .image }}" alt="{{ .alt }}" />
         </div>
+        <div>
+          {{ if .content }}
+            <div class="rich-text">
+              {{ if .title }}
+                <h2>{{ .title }}</h2>
+              {{ end }}
+              <p>{{ .content | markdownify }}</p>
+            </div>
+          {{ end }}
+          {{ if .buttonUrl }}
+            <a href="{{ .buttonUrl }}" class="btn">{{ .buttonText }}</a>
+          {{ end }}
+        </div>
+        {{ if .image }}
+
         {{ end }}
-        {{ if .buttonUrl }}
-          <a href="{{.buttonUrl}}" class="btn">{{ .buttonText }}</a>
-        {{ end }}
-      </div>
-      {{ if .image }}
-
-      <div class="image">
-        <img src="{{ .image }}" alt="{{ .alt }}">
 
       </div>
-      {{ end }}
-
     </div>
-
-  </div>
-</section>
+  </section>
 {{ end }}
