--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -1,4 +1,4 @@
-.blog-list {
+.blog-partial {
   a {
     text-decoration: none;
 
@@ -24,8 +24,7 @@
   }
 }
 
-
-.blog-list .post__image {
+.blog-partial .post__image {
   position: relative;
 
   display: block;
