--- a/tests/index.css
+++ b/tests/index.css
@@ -438,8 +438,7 @@ body {
   font-weight: 400;
   font-size: 1em;
   line-height: 1.5;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
   color: #212121;
 }
 
@@ -459,10 +458,8 @@ legend,
 caption,
 details > summary {
   font-weight: 600;
-  font-family: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue',
-    'Helvetica', 'Arial', sans-serif;
-  font-feature-settings: 'case' 1, 'cpsp' 1, 'cswh' 1, 'liga' 1, 'locl' 1,
-    'lnum' 1, 'pnum' 1, 'titl' 1, 'zero' 1;
+  font-family: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-feature-settings: 'case' 1, 'cpsp' 1, 'cswh' 1, 'liga' 1, 'locl' 1, 'lnum' 1, 'pnum' 1, 'titl' 1, 'zero' 1;
   break-after: avoid;
   page-break-after: avoid;
 }
@@ -643,8 +640,7 @@ samp,
 var {
   font-size: 1em;
   /* 1 */
-  font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace, monospace,
-    monospace;
+  font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace, monospace, monospace;
   /* 2 */
 }
 
@@ -1780,8 +1776,7 @@ table {
   margin-left: 0;
   font-size: 100%;
   font-family: inherit;
-  font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'pnum' 0, 'tnum' 1,
-    'onum' 0, 'lnum' 1, 'dlig' 0;
+  font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'pnum' 0, 'tnum' 1, 'onum' 0, 'lnum' 1, 'dlig' 0;
   border-radius: 0;
   border-collapse: separate;
   border-spacing: 0;
@@ -2450,8 +2445,7 @@ li :checked + label {
 
 progress,
 [role='progressbar'] {
-  background: linear-gradient(90deg, transparent 50%, #e1e1e1 50%) center/50px
-    50px transparent;
+  background: linear-gradient(90deg, transparent 50%, #e1e1e1 50%) center/50px 50px transparent;
   display: block;
   width: 100%;
   height: 1.5em;
@@ -2462,13 +2456,11 @@ progress,
 }
 progress[value]::-moz-progress-bar,
 [role='progressbar'][value]::-moz-progress-bar {
-  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px
-    50px transparent;
+  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px 50px transparent;
 }
 progress[value]::-webkit-progress-value,
 [role='progressbar'][value]::-webkit-progress-value {
-  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px
-    50px transparent;
+  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px 50px transparent;
 }
 progress > div,
 [role='progressbar'] > div {
@@ -2487,8 +2479,7 @@ progress > div,
   max-width: 100%;
   line-height: inherit;
   border-radius: 0;
-  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px
-    50px transparent;
+  background: linear-gradient(90deg, transparent 50%, #d9534f 50%) center/50px 50px transparent;
 }
 progress > div:first-child,
 [role='progressbar'] > div:first-child {
@@ -2502,8 +2493,7 @@ progress > div:last-child,
 }
 progress::-webkit-progress-bar,
 [role='progressbar']::-webkit-progress-bar {
-  background: linear-gradient(90deg, transparent 50%, #e1e1e1 50%) center/50px
-    50px transparent;
+  background: linear-gradient(90deg, transparent 50%, #e1e1e1 50%) center/50px 50px transparent;
 }
 
 /* selects
@@ -2759,8 +2749,7 @@ textarea {
     background: transparent !important;
   }
   body {
-    font: 12pt/1.33333 'Palatino Linotype', Palatino, 'Times New Roman', Times,
-      serif;
+    font: 12pt/1.33333 'Palatino Linotype', Palatino, 'Times New Roman', Times, serif;
     color: black;
     background: white none;
   }
