--- a/layouts/partials/high-school.html
+++ b/layouts/partials/high-school.html
@@ -1,27 +1,25 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 {{ with $data.highSchool }}
 
-<section class="image-with-text">
-  <div class="container">
+  <section class="image-with-text">
+    <div class="container">
+      <div class="two-columns align-items--center">
+        {{ if .image }}
 
-
-    <div class="two-columns align-items--center">
-      {{ if .image }}
-
-      <div class="image">
-        <img src="{{ .image }}" alt="{{ .alt }}">
-      </div>
-      {{ end }}
-      <div class="rich-text">
-        {{ if .title }}
-        <h2>{{ .title }} </h2>
+          <div class="section-image">
+            <img src="{{ .image }}" alt="{{ .alt }}" />
+          </div>
         {{ end }}
-        <p>{{ .content }}</p>
-        {{ if .buttonUrl }}
-        <a href="{{.buttonUrl}}" class="btn">{{ .buttonText }}</a>
-        {{ end }}
+        <div class="rich-text">
+          {{ if .title }}
+            <h2>{{ .title }}</h2>
+          {{ end }}
+          <p>{{ .content }}</p>
+          {{ if .buttonUrl }}
+            <a href="{{ .buttonUrl }}" class="btn">{{ .buttonText }}</a>
+          {{ end }}
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 {{ end }}
