--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -10,21 +10,18 @@
 @import '../../node_modules/modularscale-sass/stylesheets/modularscale';
 
 // 1. Configuration and helpers
-@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions',
-  'abstracts/config', 'abstracts/mixins';
+@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions', 'abstracts/config', 'abstracts/mixins';
 
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
 // 4. Layout-related sections
-@import 'layout/lists', 'layout/navigation', 'layout/table', 'layout/form',
-  'layout/gallery', 'layout/main', 'layout/header', 'layout/footer',
-  'layout/h-feed';
+@import 'layout/lists', 'layout/navigation', 'layout/table', 'layout/form', 'layout/gallery', 'layout/main',
+  'layout/header', 'layout/footer', 'layout/h-feed';
 
 // 5. Components
-@import 'components/h-entry', 'components/figure', 'components/button',
-  'components/checkbox-and-radio', 'components/output', 'components/progress',
-  'components/select', 'components/slider', 'components/text-field',
+@import 'components/h-entry', 'components/figure', 'components/button', 'components/checkbox-and-radio',
+  'components/output', 'components/progress', 'components/select', 'components/slider', 'components/text-field',
   'components/carousel', 'components/logo', 'components/embed-container', 'components/card', 'components/breadcrumbs';
 
 // 6. Page-specific styles
