--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -28,7 +28,7 @@
 
         <section class="section">
           <div class="container">
-            <div class="blog-wrap">
+            <div blog-wrap>
               <div class="blog-content">
                 <div class=" rich-text">
                   <h2>{{ .Title }}</h2>
