--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -34,7 +34,7 @@
 
   margin-bottom: to-rem(32px);
 
-  @media screen and (min-width: breakpoint('desktop')) {
+  @media screen and (min-width: breakpoint('laptop')) {
     width: 100%;
     height: 250px;
   }
