feat: update hugo

--- a/source/stylesheets/base/_helpers.scss
+++ b/source/stylesheets/base/_helpers.scss
@@ -238,6 +238,10 @@ textarea {
   align-items: center;
 }
 
+.text-align--center {
+  text-align: center;
+}
+
 .text-decoration--none {
   text-decoration: none;
 }
